@@ -13,6 +13,8 @@ import androidx.preference.PreferenceManager;
 import org.schabi.newpipe.R;
 import org.schabi.newpipe.extractor.MediaFormat;
 import org.schabi.newpipe.extractor.stream.AudioStream;
+import org.schabi.newpipe.extractor.stream.DeliveryMethod;
+import org.schabi.newpipe.extractor.stream.Stream;
 import org.schabi.newpipe.extractor.stream.VideoStream;
 
 import java.util.ArrayList;
@@ -20,27 +22,25 @@ import java.util.Arrays;
 import java.util.Collections;
 import java.util.Comparator;
 import java.util.HashMap;
-import java.util.HashSet;
 import java.util.List;
 import java.util.Objects;
 import java.util.Set;
+import java.util.function.Predicate;
 import java.util.stream.Collectors;
 
 public final class ListHelper {
     // Video format in order of quality. 0=lowest quality, n=highest quality
     private static final List<MediaFormat> VIDEO_FORMAT_QUALITY_RANKING =
-            Arrays.asList(MediaFormat.v3GPP, MediaFormat.WEBM, MediaFormat.MPEG_4);
+            List.of(MediaFormat.v3GPP, MediaFormat.WEBM, MediaFormat.MPEG_4);
 
     // Audio format in order of quality. 0=lowest quality, n=highest quality
     private static final List<MediaFormat> AUDIO_FORMAT_QUALITY_RANKING =
-            Arrays.asList(MediaFormat.MP3, MediaFormat.WEBMA, MediaFormat.M4A);
+            List.of(MediaFormat.MP3, MediaFormat.WEBMA, MediaFormat.M4A);
     // Audio format in order of efficiency. 0=most efficient, n=least efficient
     private static final List<MediaFormat> AUDIO_FORMAT_EFFICIENCY_RANKING =
-            Arrays.asList(MediaFormat.WEBMA, MediaFormat.M4A, MediaFormat.MP3);
-
-    private static final Set<String> HIGH_RESOLUTION_LIST
-            // Uses a HashSet for better performance
-            = new HashSet<>(Arrays.asList("1440p", "2160p", "1440p60", "2160p60"));
+            List.of(MediaFormat.WEBMA, MediaFormat.M4A, MediaFormat.MP3);
+    // Use a Set for better performance
+    private static final Set<String> HIGH_RESOLUTION_LIST = Set.of("1440p", "2160p");
 
     private ListHelper() { }
 
@@ -111,6 +111,51 @@ public final class ListHelper {
     }
 
     /**
+     * Return a {@link Stream} list which uses the given delivery method from a {@link Stream}
+     * list.
+     *
+     * @param streamList     the original {@link Stream stream} list
+     * @param deliveryMethod the {@link DeliveryMethod delivery method}
+     * @param <S>            the item type's class that extends {@link Stream}
+     * @return a {@link Stream stream} list which uses the given delivery method
+     */
+    @NonNull
+    public static <S extends Stream> List<S> getStreamsOfSpecifiedDelivery(
+            final List<S> streamList,
+            final DeliveryMethod deliveryMethod) {
+        return getFilteredStreamList(streamList,
+                stream -> stream.getDeliveryMethod() == deliveryMethod);
+    }
+
+    /**
+     * Return a {@link Stream} list which only contains URL streams and non-torrent streams.
+     *
+     * @param streamList the original stream list
+     * @param <S>        the item type's class that extends {@link Stream}
+     * @return a stream list which only contains URL streams and non-torrent streams
+     */
+    @NonNull
+    public static <S extends Stream> List<S> getUrlAndNonTorrentStreams(
+            final List<S> streamList) {
+        return getFilteredStreamList(streamList,
+                stream -> stream.isUrl() && stream.getDeliveryMethod() != DeliveryMethod.TORRENT);
+    }
+
+    /**
+     * Return a {@link Stream} list which only contains non-torrent streams.
+     *
+     * @param streamList the original stream list
+     * @param <S>        the item type's class that extends {@link Stream}
+     * @return a stream list which only contains non-torrent streams
+     */
+    @NonNull
+    public static <S extends Stream> List<S> getNonTorrentStreams(
+            final List<S> streamList) {
+        return getFilteredStreamList(streamList,
+                stream -> stream.getDeliveryMethod() != DeliveryMethod.TORRENT);
+    }
+
+    /**
      * Join the two lists of video streams (video_only and normal videos),
      * and sort them according with default format chosen by the user.
      *
@@ -129,8 +174,8 @@ public final class ListHelper {
             @Nullable final List<VideoStream> videoOnlyStreams,
             final boolean ascendingOrder,
             final boolean preferVideoOnlyStreams) {
-        final SharedPreferences preferences
-                = PreferenceManager.getDefaultSharedPreferences(context);
+        final SharedPreferences preferences =
+                PreferenceManager.getDefaultSharedPreferences(context);
 
         final boolean showHigherResolutions = preferences.getBoolean(
                 context.getString(R.string.show_higher_resolutions_key), false);
@@ -145,10 +190,30 @@ public final class ListHelper {
     // Utils
     //////////////////////////////////////////////////////////////////////////*/
 
+    /**
+     * Get a filtered stream list, by using Java 8 Stream's API and the given predicate.
+     *
+     * @param streamList          the stream list to filter
+     * @param streamListPredicate the predicate which will be used to filter streams
+     * @param <S>                 the item type's class that extends {@link Stream}
+     * @return a new stream list filtered using the given predicate
+     */
+    private static <S extends Stream> List<S> getFilteredStreamList(
+            final List<S> streamList,
+            final Predicate<S> streamListPredicate) {
+        if (streamList == null) {
+            return Collections.emptyList();
+        }
+
+        return streamList.stream()
+                .filter(streamListPredicate)
+                .collect(Collectors.toList());
+    }
+
     private static String computeDefaultResolution(final Context context, final int key,
                                                    final int value) {
-        final SharedPreferences preferences
-                = PreferenceManager.getDefaultSharedPreferences(context);
+        final SharedPreferences preferences =
+                PreferenceManager.getDefaultSharedPreferences(context);
 
         // Load the preferred resolution otherwise the best available
         String resolution = preferences != null
@@ -165,19 +230,20 @@ public final class ListHelper {
     }
 
     /**
-     * Return the index of the default stream in the list, based on the parameters
-     * defaultResolution and defaultFormat.
+     * Return the index of the default stream in the list, that will be sorted in the process, based
+     * on the parameters defaultResolution and defaultFormat.
      *
      * @param defaultResolution the default resolution to look for
      * @param bestResolutionKey key of the best resolution
      * @param defaultFormat     the default format to look for
-     * @param videoStreams      list of the video streams to check
-     * @return index of the default resolution&format
+     * @param videoStreams      a mutable list of the video streams to check (it will be sorted in
+     *                          place)
+     * @return index of the default resolution&format in the sorted videoStreams
      */
     static int getDefaultResolutionIndex(final String defaultResolution,
                                          final String bestResolutionKey,
                                          final MediaFormat defaultFormat,
-                                         final List<VideoStream> videoStreams) {
+                                         @Nullable final List<VideoStream> videoStreams) {
         if (videoStreams == null || videoStreams.isEmpty()) {
             return -1;
         }
@@ -187,8 +253,8 @@ public final class ListHelper {
             return 0;
         }
 
-        final int defaultStreamIndex
-                = getVideoStreamIndex(defaultResolution, defaultFormat, videoStreams);
+        final int defaultStreamIndex =
+                getVideoStreamIndex(defaultResolution, defaultFormat, videoStreams);
 
         // this is actually an error,
         // but maybe there is really no stream fitting to the default value.
@@ -233,7 +299,9 @@ public final class ListHelper {
                 .flatMap(List::stream)
                 // Filter out higher resolutions (or not if high resolutions should always be shown)
                 .filter(stream -> showHigherResolutions
-                        || !HIGH_RESOLUTION_LIST.contains(stream.getResolution()))
+                        || !HIGH_RESOLUTION_LIST.contains(stream.getResolution()
+                                // Replace any frame rate with nothing
+                                .replaceAll("p\\d+$", "p")))
                 .collect(Collectors.toList());
 
         final HashMap<String, VideoStream> hashMap = new HashMap<>();
@@ -275,7 +343,10 @@ public final class ListHelper {
      */
     private static List<VideoStream> sortStreamList(final List<VideoStream> videoStreams,
                                                     final boolean ascendingOrder) {
-        final Comparator<VideoStream> comparator = ListHelper::compareVideoStreamResolution;
+        // Compares the quality of two video streams.
+        final Comparator<VideoStream> comparator = Comparator.nullsLast(Comparator
+                .comparing(VideoStream::getResolution, ListHelper::compareVideoStreamResolution)
+                .thenComparingInt(s -> VIDEO_FORMAT_QUALITY_RANKING.indexOf(s.getFormat())));
         Collections.sort(videoStreams, ascendingOrder ? comparator : comparator.reversed());
         return videoStreams;
     }
@@ -292,8 +363,7 @@ public final class ListHelper {
                                            @Nullable final List<AudioStream> audioStreams) {
         return getAudioIndexByHighestRank(format, audioStreams,
                 // Compares descending (last = highest rank)
-                (s1, s2) -> compareAudioStreamBitrate(s1, s2, AUDIO_FORMAT_QUALITY_RANKING)
-        );
+                getAudioStreamComparator(AUDIO_FORMAT_QUALITY_RANKING));
     }
 
     /**
@@ -306,11 +376,15 @@ public final class ListHelper {
      */
     static int getMostCompactAudioIndex(@Nullable final MediaFormat format,
                                         @Nullable final List<AudioStream> audioStreams) {
-
         return getAudioIndexByHighestRank(format, audioStreams,
-                // The "-" is important -> Compares ascending (first = highest rank)
-                (s1, s2) -> -compareAudioStreamBitrate(s1, s2, AUDIO_FORMAT_EFFICIENCY_RANKING)
-        );
+                // The "reversed()" is important -> Compares ascending (first = highest rank)
+                getAudioStreamComparator(AUDIO_FORMAT_EFFICIENCY_RANKING).reversed());
+    }
+
+    private static Comparator<AudioStream> getAudioStreamComparator(
+            final List<MediaFormat> formatRanking) {
+        return Comparator.nullsLast(Comparator.comparingInt(AudioStream::getAverageBitrate))
+                .thenComparingInt(stream -> formatRanking.indexOf(stream.getFormat()));
     }
 
     /**
@@ -366,8 +440,9 @@ public final class ListHelper {
      * @param videoStreams     the available video streams
      * @return the index of the preferred video stream
      */
-    static int getVideoStreamIndex(final String targetResolution, final MediaFormat targetFormat,
-                                   final List<VideoStream> videoStreams) {
+    static int getVideoStreamIndex(@NonNull final String targetResolution,
+                                   final MediaFormat targetFormat,
+                                   @NonNull final List<VideoStream> videoStreams) {
         int fullMatchIndex = -1;
         int fullMatchNoRefreshIndex = -1;
         int resMatchOnlyIndex = -1;
@@ -376,8 +451,9 @@ public final class ListHelper {
         final String targetResolutionNoRefresh = targetResolution.replaceAll("p\\d+$", "p");
 
         for (int idx = 0; idx < videoStreams.size(); idx++) {
-            final MediaFormat format
-                    = targetFormat == null ? null : videoStreams.get(idx).getFormat();
+            final MediaFormat format = targetFormat == null
+                    ? null
+                    : videoStreams.get(idx).getFormat();
             final String resolution = videoStreams.get(idx).getResolution();
             final String resolutionNoRefresh = resolution.replaceAll("p\\d+$", "p");
 
@@ -428,7 +504,7 @@ public final class ListHelper {
      * @param videoStreams      the list of video streams to check
      * @return the index of the preferred video stream
      */
-    private static int getDefaultResolutionWithDefaultFormat(final Context context,
+    private static int getDefaultResolutionWithDefaultFormat(@NonNull final Context context,
                                                              final String defaultResolution,
                                                              final List<VideoStream> videoStreams) {
         final MediaFormat defaultFormat = getDefaultFormat(context,
@@ -437,11 +513,11 @@ public final class ListHelper {
                 context.getString(R.string.best_resolution_key), defaultFormat, videoStreams);
     }
 
-    private static MediaFormat getDefaultFormat(final Context context,
+    private static MediaFormat getDefaultFormat(@NonNull final Context context,
                                                 @StringRes final int defaultFormatKey,
                                                 @StringRes final int defaultFormatValueKey) {
-        final SharedPreferences preferences
-                = PreferenceManager.getDefaultSharedPreferences(context);
+        final SharedPreferences preferences =
+                PreferenceManager.getDefaultSharedPreferences(context);
 
         final String defaultFormat = context.getString(defaultFormatValueKey);
         final String defaultFormatString = preferences.getString(
@@ -457,8 +533,8 @@ public final class ListHelper {
         return defaultMediaFormat;
     }
 
-    private static MediaFormat getMediaFormatFromKey(final Context context,
-                                                     final String formatKey) {
+    private static MediaFormat getMediaFormatFromKey(@NonNull final Context context,
+                                                     @NonNull final String formatKey) {
         MediaFormat format = null;
         if (formatKey.equals(context.getString(R.string.video_webm_key))) {
             format = MediaFormat.WEBM;
@@ -474,57 +550,21 @@ public final class ListHelper {
         return format;
     }
 
-    // Compares the quality of two audio streams
-    private static int compareAudioStreamBitrate(final AudioStream streamA,
-                                                 final AudioStream streamB,
-                                                 final List<MediaFormat> formatRanking) {
-        if (streamA == null) {
-            return -1;
-        }
-        if (streamB == null) {
+    private static int compareVideoStreamResolution(@NonNull final String r1,
+                                                    @NonNull final String r2) {
+        try {
+            final int res1 = Integer.parseInt(r1.replaceAll("0p\\d+$", "1")
+                    .replaceAll("[^\\d.]", ""));
+            final int res2 = Integer.parseInt(r2.replaceAll("0p\\d+$", "1")
+                    .replaceAll("[^\\d.]", ""));
+            return res1 - res2;
+        } catch (final NumberFormatException e) {
+            // Consider the first one greater because we don't know if the two streams are
+            // different or not (a NumberFormatException was thrown so we don't know the resolution
+            // of one stream or of all streams)
             return 1;
         }
-        if (streamA.getAverageBitrate() < streamB.getAverageBitrate()) {
-            return -1;
-        }
-        if (streamA.getAverageBitrate() > streamB.getAverageBitrate()) {
-            return 1;
-        }
-
-        // Same bitrate and format
-        return formatRanking.indexOf(streamA.getFormat())
-                - formatRanking.indexOf(streamB.getFormat());
     }
-
-    private static int compareVideoStreamResolution(final String r1, final String r2) {
-        final int res1 = Integer.parseInt(r1.replaceAll("0p\\d+$", "1")
-                .replaceAll("[^\\d.]", ""));
-        final int res2 = Integer.parseInt(r2.replaceAll("0p\\d+$", "1")
-                .replaceAll("[^\\d.]", ""));
-        return res1 - res2;
-    }
-
-    // Compares the quality of two video streams.
-    private static int compareVideoStreamResolution(final VideoStream streamA,
-                                                    final VideoStream streamB) {
-        if (streamA == null) {
-            return -1;
-        }
-        if (streamB == null) {
-            return 1;
-        }
-
-        final int resComp = compareVideoStreamResolution(streamA.getResolution(),
-                streamB.getResolution());
-        if (resComp != 0) {
-            return resComp;
-        }
-
-        // Same bitrate and format
-        return ListHelper.VIDEO_FORMAT_QUALITY_RANKING.indexOf(streamA.getFormat())
-                - ListHelper.VIDEO_FORMAT_QUALITY_RANKING.indexOf(streamB.getFormat());
-    }
-
 
     private static boolean isLimitingDataUsage(final Context context) {
         return getResolutionLimit(context) != null;
@@ -536,11 +576,11 @@ public final class ListHelper {
      * @param context App context
      * @return maximum resolution allowed or null if there is no maximum
      */
-    private static String getResolutionLimit(final Context context) {
+    private static String getResolutionLimit(@NonNull final Context context) {
         String resolutionLimit = null;
         if (isMeteredNetwork(context)) {
-            final SharedPreferences preferences
-                    = PreferenceManager.getDefaultSharedPreferences(context);
+            final SharedPreferences preferences =
+                    PreferenceManager.getDefaultSharedPreferences(context);
             final String defValue = context.getString(R.string.limit_data_usage_none_key);
             final String value = preferences.getString(
                     context.getString(R.string.limit_mobile_data_usage_key), defValue);
@@ -555,9 +595,9 @@ public final class ListHelper {
      * @param context App context
      * @return {@code true} if connected to a metered network
      */
-    public static boolean isMeteredNetwork(final Context context) {
-        final ConnectivityManager manager
-                = ContextCompat.getSystemService(context, ConnectivityManager.class);
+    public static boolean isMeteredNetwork(@NonNull final Context context) {
+        final ConnectivityManager manager =
+                ContextCompat.getSystemService(context, ConnectivityManager.class);
         if (manager == null || manager.getActiveNetworkInfo() == null) {
             return false;
         }
